--- a/UserInterface/src/css/diagram.css
+++ b/UserInterface/src/css/diagram.css
@@ -23,6 +23,14 @@ fieldset {
     left: 10px;
 }
 
+#diagramName {
+    z-index: 3;
+    position: fixed;
+    vertical-align: middle;
+    font-size: 50px;
+    top: -10px;
+}
+
 .djs-palette, .center{
     margin: 0;
     position: absolute;
