--- a/UserInterface/src/css/App.css
+++ b/UserInterface/src/css/App.css
@@ -28,10 +28,15 @@
     }
 }
 
-/* Ids */
 #workflowControls {
     top: 10px;
     right: 10px;
     position: fixed;
     z-index: 3;
+}
+
+#workflowControls button {
+    margin-left: 5px;
+    padding-top: 2px;
+    padding-bottom: 2px;
 }
